Adjusted some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,11 @@
 @layer components {
 	/* ... */
 	.gradient {
-		/* background: rgb(255,143,112); */
-         /* background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('./assets/images/bg-pattern-intro-mobile.svg'); */
-         background-position: 50% 50%;
-         background-image: linear-gradient(180deg, rgba(255,143,112,0.95) 46%, rgba(255,61,84,0.95) 92%), url(./assets/images/bg-pattern-intro-mobile.svg);
-        /* background: linear-gradient(180deg, rgba(255,143,112,1) 46%, rgba(255,61,84,1) 92%); */
+        background-position: 50% 50%;
+        background-image: linear-gradient(180deg, rgba(255,143,112,0.95) 46%, rgba(255,61,84,0.95) 92%), url(./assets/images/bg-pattern-intro-mobile.svg);
         border-radius: 0 0 0 150px; 
 	}
-	@media (min-width: 768px) {
+	@media (min-width: 950px) {
         .gradient {
             background-position: 26% 51%;
             background-image: linear-gradient(to right, rgba(255,143,112,0.85) 2%, rgba(255,61,84,0.85) 92%), url(./assets/images/bg-pattern-intro-desktop.svg);
